--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 		<div class="container">
 			<p id="mylives"></p>
+			<button id="Start">Start</button>
 			<button id="reset">Play again</button>
-			<button id="hint">Hint</button>
 		</div>
 		
 	</div> <!--Main Container Wrapper-->
@@ -48,7 +48,7 @@
 
 
 	<footer>
-		<div class="footer">Copyright @ Jason Aron 2018</div>
+		<div class="footer">Copyright @ Jason M. Aron 2018</div>
 	</footer>
 </body>
 </html>
