--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 				<div class="container">
 					<p>Press Start To Play</p>
-					<button onclick= "newUndersoreWord() setHangmanWord()">Start</button>
+					<button onclick= "#">Start</button>
 					<button id="reset">Play again</button>
 				</div>
 
