--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 
 	<title>Hangman</title>
 
@@ -37,7 +39,7 @@
 
 				<br>
 
-				<p id="blink_me">Press Any Key To Play</p>
+				<p id="blink_me">Press Any Letter Key To Play</p>
 			</header>
 
 			<!-- Main Container -->
