--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 	<!-- Video BG -->
 	<div id="video-container">
-		<video preload="auto" autoplay="true" loop>
-			<source src="assets/images/particles.mp4" type="video/mp4">
+		<video preload="auto" autoplay="true" muted loop>
+			<source src="./assets/images/particles.mp4" type="video/mp4">
 			</video>
 
 
 
-	<audio id="myaudio" preload="auto" autoplay="true" loop>
-  		<source src="assets/03Buried.m4a" type="audio/mp4">
+	<audio id="myaudio" preload="auto" autoplay="true" controls loop>
+  		<source src="./assets/03Buried.m4a" type="audio/mp4">
   	</audio>
 
 
@@ -81,6 +81,9 @@
 		</div>
 
 		<!-- Java Script -->
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  	crossorigin="anonymous"></script>
 			<script src="./assets/javascript/game.js"></script>
 	</body>
 	</html>
